# module-registry

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
docs/: README.md  advanced-patterns.md  api-reference.md  architecture.md  best-practices.md  examples.md  faq.md  getting-started.md  plugin-development.md  testing.md  use-cases.md  user-guide.md  why-module-registry.md
examples/: plugin_system.rs
src/: constants.rs  lib.rs  macros.rs  registry.rs  security.rs  types.rs
